(library
 (name terminus)
 (public_name terminus)
 (modules terminus mock))

(library
 (name terminus_hlc)
 (public_name terminus-hlc)
 (libraries terminus http-lwt-client)
 (modules terminus_hlc))

(library
 (name terminus_cohttp)
 (public_name terminus-cohttp)
 (libraries terminus cohttp-lwt-unix)
 (modules terminus_cohttp))
